@@ -375,6 +375,7 @@ Section "MainSection" SEC01
   File "..\..\..\..\TiEmu\share\tiemu\RELEASE"
   File "..\..\..\..\TiEmu\share\tiemu\AUTHORS"
   File "..\..\..\..\TiEmu\share\tiemu\LICENSES"
+  File "..\..\..\..\TiEmu\share\tiemu\Manpage.txt"
   File "Readme.txt"
   SetOutPath "$INSTDIR\share\tcl8.4\http1.0"
   File "..\..\..\..\TiEmu\share\tcl8.4\http1.0\http.tcl"
@@ -1912,6 +1913,7 @@ Section Uninstall
   Delete "$INSTDIR\share\tiemu\AUTHORS"
   Delete "$INSTDIR\share\tiemu\RELEASE"
   Delete "$INSTDIR\share\tiemu\COPYING"
+  Delete "$INSTDIR\share\tiemu\Manpage.txt"
   Delete "$INSTDIR\share\tiemu\Readme.txt"
   Delete "$INSTDIR\share\tiemu\skins\ti92_fr.map"
   Delete "$INSTDIR\share\tiemu\skins\ti92.map"
